--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -692,6 +692,9 @@ server {
         rewrite ^/docs/iq/anne-roe/(?<old>.*)$ /docs/iq/high/anne-roe/$old permanent;
         rewrite ^/docs/iq/fullerton/(?<old>.*)$ /docs/iq/high/fullerton/$old permanent;
         rewrite ^/docs/iq/munich/(?<old>.*)$ /docs/iq/high/munich/$old permanent;
+        rewrite ^/docs/longevity/john-bjorksten/(?<old>.*)$ /docs/longevity/johan-bjorksten/$old permanent;
+        rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
+        rewrite ^/\.\/(?<all>.*)$ /$all permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotations/https%3A%2F%2F$original permanent;
