--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -2780,28 +2780,28 @@ default "";
 "~^/docs/reinforcement-learning/2018-silver.pdf.*$"     "/docs/reinforcement-learning/alphago/2018-silver.pdf";
 "~^/notes/Anne-Roe$" "/docs/iq/anne-roe/index";
 "~^/notes/Anne-Roe\.page$" "/docs/iq/anne-roe/index.page";
-"~^/docs/longevity/1942-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1942-bjorksten.pdf";
-"~^/docs/longevity/1951-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1951-bjorksten.pdf";
-"~^/docs/longevity/1958-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1958-bjorksten.pdf";
-"~^/docs/longevity/1960-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1960-bjorksten.pdf";
-"~^/docs/longevity/1965-andrews.pdf.*$"     "/docs/longevity/john-bjorksten/1965-andrews.pdf";
-"~^/docs/longevity/1965-andrews-2.pdf.*$"   "/docs/longevity/john-bjorksten/1965-andrews-2.pdf";
-"~^/docs/longevity/1968-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1968-bjorksten.pdf";
-"~^/docs/longevity/1970-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1970-bjorksten.pdf";
-"~^/docs/longevity/1971-bjorksten-2.pdf.*$" "/docs/longevity/john-bjorksten/1971-bjorksten-2.pdf";
-"~^/docs/longevity/1971-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1971-bjorksten.pdf";
-"~^/docs/longevity/1972-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1972-bjorksten.pdf";
-"~^/docs/longevity/1976-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1976-bjorksten.pdf";
-"~^/docs/longevity/1977-bjorksten-2.pdf.*$" "/docs/longevity/john-bjorksten/1977-bjorksten-2.pdf";
-"~^/docs/longevity/1977-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1977-bjorksten.pdf";
-"~^/docs/longevity/1978-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1978-bjorksten.pdf";
-"~^/docs/longevity/1981-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1981-bjorksten.pdf";
-"~^/docs/longevity/1982-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1982-bjorksten.pdf";
-"~^/docs/longevity/1982-bjorksten-2.pdf.*$" "/docs/longevity/john-bjorksten/1982-bjorksten-2.pdf";
-"~^/docs/longevity/1990-bjorksten.pdf.*$"   "/docs/longevity/john-bjorksten/1990-bjorksten.pdf";
-"~^/docs/longevity/2014-dean.pdf.*$"        "/docs/longevity/john-bjorksten/2014-dean.pdf";
-"~^/notes/Bjorksten$" "/docs/longevity/john-bjorksten/index";
-"~^/notes/Bjorksten\.page$" "/docs/longevity/john-bjorksten/index.page";
+"~^/docs/longevity/1942-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1942-bjorksten.pdf";
+"~^/docs/longevity/1951-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1951-bjorksten.pdf";
+"~^/docs/longevity/1958-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1958-bjorksten.pdf";
+"~^/docs/longevity/1960-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1960-bjorksten.pdf";
+"~^/docs/longevity/1965-andrews.pdf.*$"     "/docs/longevity/johan-bjorksten/1965-andrews.pdf";
+"~^/docs/longevity/1965-andrews-2.pdf.*$"   "/docs/longevity/johan-bjorksten/1965-andrews-2.pdf";
+"~^/docs/longevity/1968-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1968-bjorksten.pdf";
+"~^/docs/longevity/1970-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1970-bjorksten.pdf";
+"~^/docs/longevity/1971-bjorksten-2.pdf.*$" "/docs/longevity/johan-bjorksten/1971-bjorksten-2.pdf";
+"~^/docs/longevity/1971-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1971-bjorksten.pdf";
+"~^/docs/longevity/1972-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1972-bjorksten.pdf";
+"~^/docs/longevity/1976-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1976-bjorksten.pdf";
+"~^/docs/longevity/1977-bjorksten-2.pdf.*$" "/docs/longevity/johan-bjorksten/1977-bjorksten-2.pdf";
+"~^/docs/longevity/1977-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1977-bjorksten.pdf";
+"~^/docs/longevity/1978-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1978-bjorksten.pdf";
+"~^/docs/longevity/1981-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1981-bjorksten.pdf";
+"~^/docs/longevity/1982-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1982-bjorksten.pdf";
+"~^/docs/longevity/1982-bjorksten-2.pdf.*$" "/docs/longevity/johan-bjorksten/1982-bjorksten-2.pdf";
+"~^/docs/longevity/1990-bjorksten.pdf.*$"   "/docs/longevity/johan-bjorksten/1990-bjorksten.pdf";
+"~^/docs/longevity/2014-dean.pdf.*$"        "/docs/longevity/johan-bjorksten/2014-dean.pdf";
+"~^/notes/Bjorksten$" "/docs/longevity/johan-bjorksten/index";
+"~^/notes/Bjorksten\.page$" "/docs/longevity/johan-bjorksten/index.page";
 "~^/notes/Copyright-deadweight$" "/docs/economics/copyright/index";
 "~^/notes/Copyright-deadweight\.page$" "/docs/economics/copyright/index.page";
 "~^/notes/Emergenesis$" "/docs/genetics/heritable/emergenesis/index";
@@ -4356,3 +4356,23 @@ default "";
 "~^/docs/iq/2010-subotnik.pdf.*$" "/docs/iq/high/2010-subotnik.pdf";
 "~^/docs/iq/1996-jensen.pdf.*$" "/docs/iq/high/1996-jensen.pdf";
 "~^/docs/iq/1993-chubarikov.pdf.*$" "/docs/iq/high/1993-chubarikov.pdf";
+"~^/2018-houng.pdf.*$" "/docs/iq/high/2018-houng.pdf";
+"~^/docs/genetics/genome-synthesis/2021-robertson.pdf.*$" "/docs/genetics/genome-synthesis/virus-proof/2021-robertson.pdf";
+"~^/docs/psychology/vision/1933-middleton.pdf.*$" "/docs/psychology/vision/dream/1933-middleton.pdf";
+"~^/docs/psychology/vision/1942-middleton.pdf.*$" "/docs/psychology/vision/dream/1942-middleton.pdf";
+"~^/docs/psychology/vision/2002-schwitzgebel.pdf.*$" "/docs/psychology/vision/dream/2002-schwitzgebel.pdf";
+"~^/docs/psychology/vision/2003-schwitzgebel.pdf.*$" "/docs/psychology/vision/dream/2003-schwitzgebel.pdf";
+"~^/docs/psychology/vision/2006-schwitzgebel.pdf.*$" "/docs/psychology/vision/dream/2006-schwitzgebel.pdf";
+"~^/docs/psychiatry/2021-birmaher.pdf.*$" "/docs/psychiatry/depression/2021-birmaher.pdf";
+"~^/docs/psychiatry/2022-oslin.pdf.*$" "/docs/psychiatry/depression/2022-oslin.pdf";
+"~^/docs/psychiatry/2022-oginni.pdf.*$" "/docs/psychiatry/depression/2022-oginni.pdf";
+"~^/docs/psychiatry/2022-scott.pdf.*$" "/docs/psychiatry/depression/2022-scott.pdf";
+"~^/docs/psychiatry/2021-li.pdf.*$" "/docs/psychiatry/depression/2021-li.pdf";
+"~^/docs/psychiatry/2021-ferguson.pdf.*$" "/docs/psychiatry/depression/2021-ferguson.pdf";
+"~^/docs/psychiatry/2021-xu.pdf.*$" "/docs/psychiatry/depression/2021-xu.pdf";
+"~^/docs/psychology/2020-rantamaki.pdf.*$" "/docs/psychology/neuroscience/2020-rantamaki.pdf";
+"~^/docs/psychiatry/2016-witthoft.pdf.*$" "/docs/psychiatry/depression/2016-witthoft.pdf";
+"~^/docs/psychiatry/2015-gupta.pdf.*$" "/docs/psychiatry/depression/2015-gupta.pdf";
+"~^/docs/psychiatry/2015-stochl.pdf.*$" "/docs/psychiatry/depression/2015-stochl.pdf";
+"~^/docs/psychiatry/1993-kendler.pdf.*$" "/docs/psychiatry/depression/1993-kendler.pdf";
+"~^/docs/psychiatry/2018-gordon-supplement.pdf.*$" "/docs/psychiatry/depression/2018-gordon-supplement.pdf";
