--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23260,6 +23260,19 @@
 "~^/ch_celebs.jpg.*$" "/docs/rotten.com/library/culture/chess/ch_celebs.jpg";
 "~^/ch_cash.jpg.*$" "/docs/rotten.com/library/culture/chess/ch_cash.jpg";
 "~^/ch_after.jpg.*$" "/docs/rotten.com/library/culture/chess/ch_after.jpg";
+"~^/docs/reinforcement-learning/model/muzero/docs/reinforcement-learning/imperfect-information/diplomacy/index.*$" "/docs/reinforcement-learning/imperfect-information/diplomacy/index";
+"~^/docs/iq/high/smpy/1986-renzulli-systemsandmodelsfo$" "/docs/iq/high/smpy/1986-renzulli-systemsandmodelsforprogramsforgiftedtalented.pdf";
+"~^/docs/psychhology/personality/2020-ok.pdf.*$" "/docs/psychology/personality/2020-ok.pdf";
+"~^/docs/psychology/energy/docs/psychiatry/meditation/index.*$" "/docs/psychiatry/meditation/index";
+"~^/docs/rotten.com/li..h/human-sacrifice/index.html.*$" "/docs/rotten.com/library/death/human-sacrifice/index.html";
+"~^/indexNo.*$" "/index";
+"~^/images/ai/gpt/2020-brown-gpt3-figure12-larger%E3%83%A2%E3%83%87%E3%83%ABsmetalearn.png.*$" "/images/ai/gpt/2020-brown-gpt3-figure12-largermodelsmetalearn.png";
+"~^/Danbooru2020\@.*" "/Danbooru2020";
+"~^/Sidenotes\-\|.*$" "/Sidenotes";
+"~^/\.\/MLP$" "/MLP";
+"~^/Facews.*$" "/Faces";
+"~^/misc$" "/index";
+"~^/docs/link-bibliography/research-criticism.*$" "/docs/link-bibliography/Research-criticism";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27676,6 +27689,7 @@
 "~^/MDB.tar.gz.*$" "/static/404.html";
 "~^/ligopartners.com.*$" "https://www.ligopartners.com/";
 "~^/\&lang*$" "/static/404.html";
+"~^/particlefacecream.com.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
