--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4376,3 +4376,9 @@ default "";
 "~^/docs/psychiatry/2015-stochl.pdf.*$" "/docs/psychiatry/depression/2015-stochl.pdf";
 "~^/docs/psychiatry/1993-kendler.pdf.*$" "/docs/psychiatry/depression/1993-kendler.pdf";
 "~^/docs/psychiatry/2018-gordon-supplement.pdf.*$" "/docs/psychiatry/depression/2018-gordon-supplement.pdf";
+"~^/docs/nootropic/2009-darwish.pdf.*$" "/docs/modafinil/2009-darwish.pdf";
+"~^/images/ai/2021-openai-dalle-inferringcontextualdetails-acapybarasittinginafieldatsunrise.png.*$" "/images/ai/dalle/1/2021-openai-dalle-inferringcontextualdetails-acapybarasittinginafieldatsunrise.png";
+"~^/images/ai/2021-openai-dalle-textpromptexamples.png.*$" "/images/ai/dalle/1/2021-openai-dalle-textpromptexamples.png";
+"~^/images/ai/2022-07-18-gwern-dalle2-spiceandwolfgoldenookamiwolfagainsttempleatnight-17.48.45.png.*$" "/images/ai/dalle/2/2022-07-18-gwern-dalle2-spiceandwolfgoldenookamiwolfagainsttempleatnight-17.48.45.png";
+"~^/images/ai/2022-ramesh-figure15-dalle2vsglideobjectbindingproblemimagesamples.png.*$" "/images/ai/dalle/2/2022-ramesh-figure15-dalle2vsglideobjectbindingproblemimagesamples.png";
+"~^/images/ai/2022-ramesh-figure16-dalle2badtextsamplessayingdeeplearning.png.*$" "/images/ai/dalle/2/2022-ramesh-figure16-dalle2badtextsamplessayingdeeplearning.png";
