--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4382,3 +4382,7 @@ default "";
 "~^/images/ai/2022-07-18-gwern-dalle2-spiceandwolfgoldenookamiwolfagainsttempleatnight-17.48.45.png.*$" "/images/ai/dalle/2/2022-07-18-gwern-dalle2-spiceandwolfgoldenookamiwolfagainsttempleatnight-17.48.45.png";
 "~^/images/ai/2022-ramesh-figure15-dalle2vsglideobjectbindingproblemimagesamples.png.*$" "/images/ai/dalle/2/2022-ramesh-figure15-dalle2vsglideobjectbindingproblemimagesamples.png";
 "~^/images/ai/2022-ramesh-figure16-dalle2badtextsamplessayingdeeplearning.png.*$" "/images/ai/dalle/2/2022-ramesh-figure16-dalle2badtextsamplessayingdeeplearning.png";
+"~^/static/js/darkmode-inline.js$" "/static/js/dark-mode-inline.js";
+"~^/static/js/darkmode.js$" "/static/js/dark-mode.js";
+"~^/static/js/darkmode.js.html$" "/static/js/dark-mode.js.html";
+"~^/static/img/icons/triple-question-mark.png.*$" "/static/img/triple-question-mark.png";
