--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23403,6 +23403,21 @@
 "~^/docs/traffic/2013-guernmet-anongmousfeedbackcolClassosc.*$" "/docs/traffic/2013-gwernnet-anonymousfeedback.csv";
 "~^/Hydrocephf.*$" "/Hydrocephalus";
 "~^/A/B-testing-long-.*$" "/AB-testing";
+"~^/Terrorismis-not-Effective.*$" "/Terrorism-is-not-Effective";
+"~^/\.rotten.com/library/bio/crime/assassins/dan-white/index.html.*$" "/docs/rotten.com/library/bio/crime/assassins/dan-white/index.html";
+"~^/Danbooru2020.Accessed.*$" "/Danbooru2020";
+"~^/Desiign.*$" "/Design";
+"~^/docs/=-09-/=-09-/=-098]//index.html.*$" "/docs/index";
+"~^/docs/darknet-markets/2019-04-22deepdotweb-dnmlist.html.*$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/docs/darknet-markets/2022-vandersanden\(.\)pdf.*$" "/docs/darknet-markets/2022-vandersanden.pdf";
+"~^/Littlewood-\|.*$" "/Littlewood";
+"~^/https-en.wikipedia.org/$" "https://en.wikipedia.org/wiki/Main_Page";
+"~^/docs/[a-km-z]/Wikipedia-and-Other-Wikis$" "Wikipedia-and-Other-Wikis";
+"~^/docs/[a-km-z]/Complement$" "/Complement";
+"~^/docs/genetics/selection/2013-anonymous-strategicconsequencesofchineseracism.pd\\f$" "/docs/genetics/selection/artificial/2013-anonymous-strategicconsequencesofchineseracism.pdf";
+"~^/docs/darknet-markets/https:/web.archive.org/web/20140806195638/http:/www.deepdotweb.com/2014/01/02/warning-reports-of-flomarket-possible-scam-hack/$" "/docs/darknet-markets/2014-01-02-deepdotweb-flomarketexitscam.html";
+"~^/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.htm$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/Wikipedia-and-Dark-Side-ing.*$" "/Wikipedia-and-Dark-Side-Editing";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
