--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4394,3 +4394,4 @@ default "";
 "~^/docs/fiction/2002-wolfe-locusinterview.pdf.*$" "/docs/fiction/gene-wolfe/2002-wolfe-locusinterview.pdf";
 "~^/docs/fiction/2004-wolfe.pdf.*$" "/docs/fiction/gene-wolfe/2004-wolfe.pdf";
 "~^/docs/economics/perpetuities/2015-heldring.pdf.*$" "/docs/economics/perpetuities/2021-heldring.pdf";
+"~^/docs/fiction/2012-03-10-sebastianmarshall-ladyyododono.html.*$" "/docs/fiction/poetry/2012-03-10-sebastianmarshall-ladyyododono.html";
