--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -2946,7 +2946,7 @@
 "~^/docs/1984-berger\.djvu$" "/docs/radiance/1984-berger.pdf";
 "~^/docs/radiance/1984-berger\.djvu$" "/docs/radiance/1984-berger.pdf";
 "~^/1984-berger\.pdf$" "/docs/radiance/1984-berger.pdf";
-"~^/docs/radiance/198%20@BOOK%20\{chesney,%20\|4-berger\.pdf$" "/docs/radiance/1984-berger.pdf";
+"~^/docs/radiance/198%20@BOOK%20\{chesney,%20.4-berger\.pdf$" "/docs/radiance/1984-berger.pdf";
 "~^/docs/1984-berger\.pdf$" "/docs/radiance/1984-berger.pdf";
 "~^/docs/radiance/1985-broad-starwarriors\.djvu$" "/docs/radiance/1985-broad-starwarriors.pdf";
 "~^/docs/1987-kidder\.pdf$" "/docs/radiance/1987-kidder.pdf";
@@ -4776,7 +4776,7 @@
 "~^/newsletter/2017/00$" "/newsletter/2017/01";
 "~^/newsletter/2017/01CachedNon-Communication$" "/newsletter/2017/01";
 "~^/newsletter/2017/1$" "/newsletter/2017/01";
-"~^/newsletter/2017/02%20\|$" "/newsletter/2017/02";
+"~^/newsletter/2017/02%20.$" "/newsletter/2017/02";
 "~^/newsletter/2017/02\+%7C$" "/newsletter/2017/02";
 "~^/newsletter/2017/2$" "/newsletter/2017/02";
 "~^/newsletter/2017/5$" "/newsletter/2017/05";
@@ -23101,7 +23101,7 @@
 "~^/docs/personal/rss-subscriptions.opml/feed.*$" "/docs/personal/rss-subscriptions.opml";
 "~^/docs/nicotine/dx.doi.org/10.1016/j.drugalcdep.2008.05.001.*$" "/docs/nicotine/2008-gerlach.pdf";
 "~^/docs/lith$" "/docs/lithium/index";
-"~^/static/postitem.html.*$" "/static/404.html";
+"~^/static/.*postitem.html.*$" "/static/404.html";
 "~^/irc:/irc.libera.chat.*$" "https://libera.chat/";
 "~^/heritable/$" "/docs/genetics/heritable/index";
 "~^/docs/rotten.com/library/bio/presidents/richard-m-nixon/nixon_bugged_himsel$" "/docs/rotten.com/library/bio/presidents/richard-m-nixon/nixon_bugged_himself.gif";
@@ -23223,7 +23223,7 @@
 "~^/static/LinkArchive.hs.html.*$" "/static/build/LinkArchive.hs.html";
 "~^/static/img/miri.svg.*$" "/static/img/icons/miri.svg";
 "~^/static/img/icons/raven-2.svg.*$" "/static/img/icons/raven.svg";
-"~^/\|-Essays---Gwern.net.*$" "/index";
+"~^/.-Essays---Gwern.net.*$" "/index";
 "~^/docs/modafinil/2012-modafinil-lexisnexisacademic.txt&amp.*$" "/docs/modafinil/2012-modafinil-lexisnexisacademic.txt";
 "~^/docs/[a-km-z].*/Terrorism-is-not-Effective.*$" "/Terrorism-is-not-Effective";
 "~^/docs/link-bibliography/notes/tbi$" "/docs/link-bibliography/notes/TBI";
@@ -23263,7 +23263,7 @@
 "~^/indexNo.*$" "/index";
 "~^/images/ai/gpt/2020-brown-gpt3-figure12-larger%E3%83%A2%E3%83%87%E3%83%ABsmetalearn.png.*$" "/images/ai/gpt/2020-brown-gpt3-figure12-largermodelsmetalearn.png";
 "~^/Danbooru2020\@.*" "/Danbooru2020";
-"~^/Sidenotes\-\|.*$" "/Sidenotes";
+"~^/Sidenotes\-.*$" "/Sidenotes";
 "~^/\.\/MLP$" "/MLP";
 "~^/Facews.*$" "/Faces";
 "~^/misc$" "/index";
@@ -23378,7 +23378,6 @@
 "~^/conversation/steven_pinker-preface-to-dangerous-ideas$" "https://www.edge.org/conversation/steven_pinker-preface-to-dangerous-ideas";
 "~^/conversation/elaine_pagels-the-social-history-of-religion$" "https://www.edge.org/conversation/elaine_pagels-the-social-history-of-religion";
 "~^/ai/$" "/docs/ai/index";
-
 "~^/static/dark-mode.js.*$" "/static/js/dark-mode.js";
 "~^/issues/cumberbitches-tried-to-get-me-fired.*$" "/docs/sociology/2014-meganc-obsessedbenedictcumberbatchfanstriedtohavemefired.html";
 "~^/docs/reviews/index$" "/reviews/index";
@@ -23410,7 +23409,7 @@
 "~^/docs/=-09-/=-09-/=-098]//index.html.*$" "/docs/index";
 "~^/docs/darknet-markets/2019-04-22deepdotweb-dnmlist.html.*$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
 "~^/docs/darknet-markets/2022-vandersanden\(.\)pdf.*$" "/docs/darknet-markets/2022-vandersanden.pdf";
-"~^/Littlewood-\|.*$" "/Littlewood";
+"~^/Littlewood-..*$" "/Littlewood";
 "~^/https-en.wikipedia.org/$" "https://en.wikipedia.org/wiki/Main_Page";
 "~^/docs/[a-km-z]/Wikipedia-and-Other-Wikis$" "Wikipedia-and-Other-Wikis";
 "~^/docs/[a-km-z]/Complement$" "/Complement";
@@ -23418,6 +23417,26 @@
 "~^/docs/darknet-markets/https:/web.archive.org/web/20140806195638/http:/www.deepdotweb.com/2014/01/02/warning-reports-of-flomarket-possible-scam-hack/$" "/docs/darknet-markets/2014-01-02-deepdotweb-flomarketexitscam.html";
 "~^/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.htm$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
 "~^/Wikipedia-and-Dark-Side-ing.*$" "/Wikipedia-and-Dark-Side-Editing";
+"~^/docs/rotten.com/library/conspiracy/un/.*$" "/docs/rotten.com/library/conspiracy/index";
+"~^/docs/rotten.com/library/conspiracy/united-nations/.*$" "/docs/rotten.com/library/conspiracy/index";
+"~^/docs/statistics/decision/1994.pdf$" "/docs/statistics/decision/1994-benter.pdf";
+"~^/docs/µ$" "/docs/index";
+"~^/FacesProgressiv.*$" "/Faces";
+"~^/gpt-3/love.*$" "/GPT-3";
+"~^/gpt-3/toda.*$" "/GPT-3";
+"~^/psychedelic$" "/docs/psychedelics/index";
+"~^/fiction-/clippy.*$" "/fiction/Clippy";
+"~^/docs/iq/2018-warne.pdf .*$" "/docs/iq/2018-warne.pdf";
+"~^/docs/[a-km-z]/fiction/Brave-poem.*$" "/fiction/Brave-poem";
+"~^/docs/[a-km-z]/Milk.*$" "/Milk";
+"~^/patreon$" "https://www.patreon.com/gwern";
+"~^/static/build/LinkLive.hi$" "/static/build/LinkLive.hs";
+"~^/static/build/LinkIcon.hi$" "/static/build/LinkIcon.hs";
+"~^/docs/iq/ses/2002-hauser.pdf%5C.*$" "/docs/iq/ses/2002-hauser.pdf";
+"~^/docs/cs/hardware/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/docs/borges/%601947-borges-anewrefutationoftime.pdf.*$" "/docs/borges/1947-borges-anewrefutationoftime.pdf";
+"~^/docs/2005-escorial.pdf.*$" "/docs/iq/2005-escorial.pdf";
+"~^/images/reinforcement-learning/2022-ganguli-figure2-visualizationofsuccessfulredteamattacksonlanguage-models.png.*$" "/images/reinforcement-learning/2022-ganguli-figure2-visualizationofsuccessfulredteamattacksonlanguagemodels.png";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
