--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -3447,9 +3447,6 @@
 "~^/docs/statistics/causality/1987-%20hazelrigg\.pdf$" "/docs/statistics/1987-hazelrigg.pdf";
 "~^/docs/1989-shimojo\.pdf$" "/docs/statistics/1989-shimojo.pdf";
 "~^/docs/statistics/1990-tufte-envisioninginformation-ch5-bryneseuclid\.pdf$" "/docs/design/1990-tufte-envisioninginformation-ch5-byrneseuclid.pdf";
-"~^/docs/1994-falk$" "/docs/statistics/1994-falk";
-"~^/docs/statistics/1994-fal$" "/docs/statistics/1994-falk";
-"~^/docs/1994-falk\.pdf$" "/docs/statistics/1994-falk.pdf";
 "~^/docs/statistics/2001-preston-demography\.djvu$" "/docs/statistics/2001-preston-demography.pdf";
 "~^/docs/statistics/2004-hunterschmidt-ethodsofmetaanalysis\.pdf$" "/docs/statistics/2004-hunterschmidt-methodsofmetaanalysis.pdf";
 "~^/docs/2007-teigen\.pdf$" "/docs/statistics/2007-teigen.pdf";
@@ -3472,12 +3469,6 @@
 "~^/docs/statistics/1987-ayton\.pdf$" "/docs/statistics/bayes/1987-ayton.pdf";
 "~^/docs/statistics/1989-shimojo\.pdf$" "/docs/statistics/bayes/1989-shimojo.pdf";
 "~^/docs/statistics/1992-falk\.pdf$" "/docs/statistics/bayes/1992-falk.pdf";
-"~^/docs/psychology/docs/statistics/bayes/1994-falk$" "/docs/statistics/bayes/1994-falk";
-"~^/docs/docs/statistics/bayes/1994-falk$" "/docs/statistics/bayes/1994-falk";
-"~^/docs/statistics/1994-falk$" "/docs/statistics/bayes/1994-falk";
-"~^/docs/statistics/1994-falk\.page$" "/docs/statistics/bayes/1994-falk.page";
-"~^/docs/statistics/1994-falk\.pdf$" "/docs/statistics/bayes/1994-falk.pdf";
-"~^/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/Docs/Statistics/Bayes/1995-Cavin\.pdf\.$" "/docs/statistics/bayes/1995-cavin.pdf";
 "~^/docs/1995-cavin\.pdf$" "/docs/statistics/bayes/1995-cavin.pdf";
 "~^/docs/statistics/2003-korb\.pdf$" "/docs/statistics/bayes/2003-korb.pdf";
@@ -4972,6 +4963,7 @@
 "~^/RNN\+metadata$" "/RNN-metadata";
 "~^/static/robots\.txt$" "/robots.txt";
 "~^/biggan/biggan/2019-07-27-grapeot-danbooru2018-animecharacterrecognition\.tar$" "rsync://176.9.41.242:873/biggan/2019-07-27-grapeot-danbooru2018-animecharacterrecognition.tar";
+"~^/biggan/2021-11-08-rivershavewings-vdiffusionjaxddpm-danbooru2020sfw128px-32epochs.pkl.*$" "rsync://176.9.41.242:873/biggan/2021-11-08-rivershavewings-vdiffusionjaxddpm-danbooru2020sfw128px-32epochs.pkl";
 "~^/Scaner$" "/Scanners";
 "~^/Scaners$" "/Scanners";
 "~^/scanner$" "/Scanners";
@@ -6374,7 +6366,6 @@
 "~^/docs/docs/sociology/1978-rossi.pdf$" "/docs/sociology/1978-rossi.pdf";
 "~^/docs/docs/sociology/1987-rossi$" "/docs/sociology/1987-rossi";
 "~^/docs/docs/sr/2013-power$" "/docs/darknet-markets/2013-power";
-"~^/docs/docs/statistics/bayes/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/docs/statistics/order/beanmachine-multistage/index.html$" "/docs/statistics/order/beanmachine-multistage/index.html";
 "~^/docs/docs/xrisks/1985-hofstadter$" "/docs/xrisks/1985-hofstadter";
 "~^/docs/Drug-heuristics$" "/Drug-heuristics";
@@ -6681,7 +6672,6 @@
 "~^/1987-rossi$" "/docs/sociology/1987-rossi";
 "~^/1981-duchastel$" "/docs/spacedrepetition/1981-duchastel";
 "~^/2013-power$" "/docs/darknet-markets/2013-power";
-"~^/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/1985-hofstadter$" "/docs/xrisks/1985-hofstadter";
 "~^/A-Human-Story$" "/fiction/A-Human-Story";
 "~^/Batman$" "/fiction/Batman";
@@ -8302,7 +8292,6 @@
 "~^/1994-detterman.pdf$" "/docs/iq/1994-detterman.pdf";
 "~^/1994-doj-sentencing.pdf$" "/docs/darknet-markets/1994-doj-sentencing.pdf";
 "~^/1994-dunlosky.pdf$" "/docs/spacedrepetition/1994-dunlosky.pdf";
-"~^/1994-falk.pdf$" "/docs/statistics/bayes/1994-falk.pdf";
 "~^/1994-feldman.pdf$" "/docs/catnip/1994-feldman.pdf";
 "~^/1994-flynn.pdf$" "/docs/iq/1994-flynn.pdf";
 "~^/1994-gottfried-giftediqfullertonlongitudinalstudy.pdf$" "/docs/iq/fullerton/1994-gottfried-giftediqfullertonlongitudinalstudy.pdf";
@@ -11404,7 +11393,6 @@
 "~^/docs/personal/docs/japanese/2002-gibson$" "/docs/japanese/2002-gibson";
 "~^/docs/personal/docs/xrisks/1985-hofstadter$" "/docs/xrisks/1985-hofstadter";
 "~^/docs/rotten.com/library/conspiracy/jasons/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman$" "/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
-"~^/docs/rotten.com/library/conspiracy/jasons/docs/statistics/bayes/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/rotten.com/library/conspiracy/jasons/fiction/Dinosaur-Comics$" "/fiction/Dinosaur-Comics";
 "~^/docs/rotten.com/library/conspiracy/jasons/fiction/Poems$" "/fiction/Poems";
 "~^/docs/rotten.com/library/conspiracy/jasons/haskell/Wikipedia-RSS-Archive-Bot$" "/haskell/Wikipedia-RSS-Archive-Bot";
@@ -11481,7 +11469,6 @@
 "~^/docs/genetics/selection/www.mountimprobable.com/docs/eva/2003-oshii-izubuchi$" "/docs/eva/2003-oshii-izubuchi";
 "~^/docs/genetics/selection/www.mountimprobable.com/docs/eva/2004-okada$" "/docs/eva/2004-okada";
 "~^/docs/genetics/selection/www.mountimprobable.com/docs/japanese/2002-gibson$" "/docs/japanese/2002-gibson";
-"~^/docs/genetics/selection/www.mountimprobable.com/docs/statistics/bayes/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/genetics/selection/www.mountimprobable.com/Ethical-sperm-donation$" "/Ethical-sperm-donation";
 "~^/docs/genetics/selection/www.mountimprobable.com/fiction/The-Buddhas-Wheel$" "/fiction/The-Buddhas-Wheel";
 "~^/docs/genetics/selection/www.mountimprobable.com/fiction/The-Erl-King$" "/fiction/The-Erl-King";
@@ -11803,7 +11790,6 @@
 "~^/newslet$" "/docs/newsletter/index";
 "~^/docs/sociology/1981-guba$" "/docs/sociology/1981-guba-effectiveevaluation.pdf";
 "~^/DNM-archivesIm$" "/DNM-archives";
-"~^/docs/1994-falk.*$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/2010-repantis.pdf$" "/docs/modafinil/2010-repantis.pdf";
 "~^/docs/2017$" "/docs/index";
 "~^/docs/2049-cherepushka.pdf$" "/static/404";
@@ -12014,7 +12000,6 @@
 "~^/docs/sociology/docs/japanese/2002-gibson$" "/docs/japanese/2002-gibson";
 "~^/docs/sociology/docs/sociology/1987-rossi$" "/docs/sociology/1987-rossi";
 "~^/docs/sociology/docs/sr/2013-power$" "/docs/darknet-markets/2013-power";
-"~^/docs/sociology/docs/statistics/bayes/1994-falk$" "/doc/statistics/bayes/1994-falk";
 "~^/docs/sociology/docs/statistics/order/beanmachine-multistage/index.html$" "/docs/statistics/order/beanmachine-multistage/index.html";
 "~^/docs/sociology/docs/xrisks/1985-hofstadter$" "/docs/xrisks/1985-hofstadter";
 "~^/docs/sociology/fiction/Batman$" "/fiction/Batman";
@@ -12357,7 +12342,6 @@
 "~^/docs/statistics/docs/culture/2007-wolfe$" "/2007-wolfe";
 "~^/docs/statistics/docs/eva/2004-okada$" "/2004-okada";
 "~^/docs/statistics/docs/sociology/1987-rossi$" "/1987-rossi";
-"~^/docs/statistics/docs/statistics/bayes/1994-falk$" "/1994-falk";
 "~^/docs/statistics/fiction/The-Snowbanks-of-Time$" "/The-Snowbanks-of-Time";
 "~^/docs/statistics/haskell/Run-Length-Encoding$" "/Run-Length-Encoding";
 "~^/docs/statistics/hpmor$" "/hpmor";
@@ -12509,7 +12493,6 @@
 "~^/docs/www/docs/sociology/1978-rossi.pdf$" "/docs/sociology/1978-rossi.pdf";
 "~^/docs/www/docs/sociology/1987-rossi$" "/docs/sociology/1987-rossi";
 "~^/docs/www/docs/sr/2013-power$" "/docs/darknet-markets/2013-power";
-"~^/docs/www/docs/statistics/bayes/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/www/docs/xrisks/1985-hofstadter$" "/docs/xrisks/1985-hofstadter";
 "~^/docs/www/Drug-heuristics$" "/Drug-heuristics";
 "~^/docs/www/Dune-genetics$" "/Dune-genetics";
@@ -13088,7 +13071,6 @@
 "~^/gocs/longetivity/2019-decabo.pdf$" "/docs/longevity/2019-decabo.pdf";
 "~^/docs/genetics/selection/www.mountimprobable.com/Colder-Wars$" "/Colder-Wars";
 "~^/docs/genetics/selection/www.mountimprobable.com/Creatine$" "/Creatine";
-"~^/docs/longevity/docs/statistics/bayes/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/longevity/Nootropics$" "/Nootropics";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/The-Narrowing-Circle$" "/The-Narrowing-Circle";
 "~^/docs/rotten.com/library/bio/entertainers/actors/brad-pitt/docs/bitcoin/2008-nakamoto$" "/docs/bitcoin/2008-nakamoto";
@@ -13170,7 +13152,6 @@
 "~^/Archiving-URLs-.*$" "/Archiving-URLs";
 "~^/docs/music-distraction/1972-fox.pdf%.*$" "/docs/music-distraction/1972-fox.pdf";
 "~^/docs/sociology/docs/www/www.brookings.edu/5b35ca22ceaf8bc05b8c9da124228f7d57f12142.html$" "/docs/www/www.brookings.edu/5b35ca22ceaf8bc05b8c9da124228f7d57f12142.html";
-"~^/doc/statistics/bayes/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/GPT-3%.*$" "/GPT-3";
 "~^/favicons/32x32.png$" "/static/img/favicon.png";
 "~^/newsletter/20$" "/docs/newsletter/index";
@@ -13830,7 +13811,6 @@
 "~^/docs/genetics/selection/www.mountimprobable.com/About$" "/About";
 "~^/docs/modafinil/2020-roberts.pdf/favicon.ico$" "/favicon.ico";
 "~^/docs/psychology/Timestamping$" "/Timestamping";
-"~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/docs/statistics/bayes/1994-falk$" "/1994-falk";
 "~^/docs/rotten.com/library/bio/entertainers/actors/brad-pitt/DNB-FAQ$" "/DNB-FAQ";
 "~^/docs/rotten.com/library/bio/entertainers/actors/brad-pitt/DNM-survival$" "/DNM-survival";
 "~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/Arias-past-present-and-future$" "/Arias-past-present-and-future";
@@ -14212,7 +14192,6 @@
 "~^/docs/psychology/The-Existential-Risk-of-Mathematical-Error$" "/The-Existential-Risk-of-Mathematical-Error";
 "~^/docs/rotten.com/library/bio/entertainers/actors/brad-pitt/GPT-2-music$" "/GPT-2-music";
 "~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/Complement$" "/Complement";
-"~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/docs/statistics/bayes/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/fiction/Menard$" "/fiction/Menard";
 "~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/Fulltext$" "/Fulltext";
 "~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/Life-contract$" "/Life-contract";
@@ -16044,7 +16023,6 @@
 "~^/docs/genetics/heritable/docs/eva/2003-oshii-izubuchi$" "/docs/eva/2003-oshii-izubuchi";
 "~^/docs/genetics/heritable/docs/eva/2010-crc$" "/docs/eva/2010-crc";
 "~^/docs/genetics/heritable/docs/radiance/2002-scholz-radiance$" "/docs/radiance/2002-scholz-radiance";
-"~^/docs/genetics/heritable/docs/statistics/bayes/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/genetics/heritable/fiction/Hybrid-Rainbow$" "/fiction/Hybrid-Rainbow";
 "~^/docs/genetics/heritable/fiction/The-Palace-of-Wonders$" "/fiction/The-Palace-of-Wonders";
 "~^/docs/genetics/heritable/Hafu$" "/Hafu";
@@ -16239,7 +16217,6 @@
 "~^/docs/statistics/docs/statistics/1989-konold.pdf$" "/docs/statistics/bias/1989-konold.pdf";
 "~^/docs/statistics/docs/statistics/1989-shimojo.pdf$" "/docs/statistics/bayes/1989-shimojo.pdf";
 "~^/docs/statistics/docs/statistics/1992-falk.pdf$" "/docs/statistics/bayes/1992-falk.pdf";
-"~^/docs/statistics/docs/statistics/1994-falk.pdf$" "/docs/statistics/bayes/1994-falk.pdf";
 "~^/docs/statistics/docs/statistics/2007-teigen.pdf$" "/docs/statistics/bayes/2007-teigen.pdf";
 "~^/docs/statistics/docs/statistics/2008-falk.pdf$" "/docs/statistics/bias/2008-falk.pdf";
 "~^/docs/teika\?amp.*$" "/docs/japanese/teika";
@@ -16967,7 +16944,6 @@
 "~^/docs/longevity/2017-trepanowski$" "/docs/longevity/2017-trepanowski.pdf";
 "~^/docs/rotten.com/library/imagery/subliminal/kanon/index.html$" "/docs/rotten.com/library/imagery/subliminal/advertising/kanon/index.html";
 "~^/docs/sociology/1974Y$" "/docs/sociology/1974-levison-theworkingclassmajority.pdf";
-"~^/docs/statistics/1994-falk.*$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/statistics/bias/1976-rosenthal$" "/docs/statistics/bias/1976-rosenthal-experimenterexpectancyeffects.pdf";
 "~^/docs/sunkc$" "/docs/sunkcosts/index";
 "~^/Google-Alerts/$" "/Google-Alerts";
@@ -17569,7 +17545,6 @@
 "~^/Longevityhttps:/en.wikipedia.org/wiki/Hal_Finney$" "https:/en.wikipedia.org/wiki/Hal_Finney";
 "~^/docs/stafisfics/decision/1995-tengs.pdf$" "/docs/statistics/decision/1995-tengs.pdf";
 "~^/docs/sr/2015-interpol-pharmaceuticals$" "/docs/darknet-markets/2015-interpol-pharmaceuticals.pdf";
-"~^/docs/rotten.*/1994-falk$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/rotten.com/library/bio/entertainers/actors/Brad_Pitt/bp8.jpg$" "/docs/rotten.com/library/bio/entertainers/actors/brad-pitt/bp8.jpg";
 "~^/docs/psychology/JCD63_07.pdf$" "/docs/psychology/index";
 "~^/docs/psychology...%E2%80%8B$" "/docs/psychology/index";
@@ -18410,7 +18385,6 @@
 "~^/RSS$" "https://gwern.substack.com/feed";
 "~^/feedback$" "https://docs.google.com/forms/d/17cNf0ohMHKeTwmUM_V_hDVkirjsf8HLMWsJco8gt2Eg/viewform";
 "~^/faq$" "/About";
-"~^/./docs/statistics/1994-falk.*$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/statistics/1957-bellman-dynamicprogramming.*$" "/docs/statistics/decision/1957-bellman-dynamicprogramming.pdf";
 "~^/\./docs/eva/2002-notenki-memoirs$" "/docs/eva/2002-takeda-notenkimemoirs";
 "~^/docs/psychology/okcupid/samesexdataforracevsreplyrates$" "/docs/psychology/okcupid/samesexdataforracevsreplyrates.html";
@@ -18593,7 +18567,6 @@
 "~^/.*/An-Abortion-Dialogue.*$" "/An-Abortion-Dialogue";
 "~^/newsletter/.*/twitter.svg.*$" "/static/img/icons/twitter.svg";
 "~^/newsletter/.*/hn.svg.*$" "/static/img/icons/hn.svg";
-"~^/docs/statistics/bayes/1994-falk/.*$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/rotten.com/library/bio/entertainers/actors/Brad_Pitt/bpintro.jpg.*$" "/docs/rotten.com/library/bio/entertainers/actors/brad-pitt/bpintro.jpg";
 "~^/docs/personal/rss-subscriptions.opm$" "/docs/personal/rss-subscriptions.opml";
 "~^/docs/longevity/2019-decabo.pdf[a-zA-Z].*$" "/docs/longevity/2019-decabo.pdf";
@@ -18642,7 +18615,6 @@
 "~^/posts/7b3njJqE7fzurhFTM/daily-low-dose-aspirin-round-2.*$" "https://www.lesswrong.com/posts/7b3njJqE7fzurhFTM/daily-low-dose-aspirin-round-2";
 "~^/7b3njJqE7fzurhFTM/daily-low-dose-aspirin-round-2.*$" "https://www.lesswrong.com/7b3njJqE7fzurhFTM/daily-low-dose-aspirin-round-2";
 "~^/NRA$" "https://en.wikipedia.org/wiki/National_Rifle_Association";
-"~^/.*/docs/statistics/bayes/1994-falk.*$" "/docs/statistics/bayes/1994-falk";
 "~^/surfsmartvpn.co.uk.*$" "https://surfsmartvpn.co.uk/";
 "~^/GPT-3m.*$" "/GPT-3";
 "~^/docs/ai/2002%E2%80%90hedberg.pdf.*$" "/docs/ai/2002-hedberg.pdf";
@@ -22427,6 +22399,7 @@
 "~^/EA$" "/EA-donations";
 "~^/Holy$" "/Holy-wars";
 "~^/Ontological$" "/Ontological-pantheism";
+"~^/docs/[a-km-z]/Ontological-pantheism$" "/Ontological-pantheism";
 "~^/docs/existential$" "/docs/existential-risk/index";
 "~^/docs/statistics/order/beanmachine$" "/docs/statistics/order/beanmachine-multistage/index.html";
 "~^/fiction/Men$" "/fiction/Men-of-Iron";
@@ -23437,6 +23410,16 @@
 "~^/docs/borges/%601947-borges-anewrefutationoftime.pdf.*$" "/docs/borges/1947-borges-anewrefutationoftime.pdf";
 "~^/docs/2005-escorial.pdf.*$" "/docs/iq/2005-escorial.pdf";
 "~^/images/reinforcement-learning/2022-ganguli-figure2-visualizationofsuccessfulredteamattacksonlanguage-models.png.*$" "/images/reinforcement-learning/2022-ganguli-figure2-visualizationofsuccessfulredteamattacksonlanguagemodels.png";
+"~^/docs/genetics/selection/artificial/2018-wallace$" "/docs/genetics/selection/artificial/2018-wallace.pdf";
+"~^/docs/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html`.*$" "/docs/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
+"~^/.*提出，我只不过是照着他的方法重现了.*$" "/Faces";
+"~^/Danbooru.*/posts.*$" "/Danbooru";
+"~^/docs/1994-falk.*" "/docs/statistics/bayes/1994-falk";
+"~^/docs/statistics/1994-falk.*" "/docs/statistics/bayes/1994-falk";
+"~^/.*/1207594056377.gif.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207594056377.gif";
+"~^/.*/1207589878917.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207589878917.jpg";
+"~^/.*/1207537958915.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207537958915.jpg";
+"~^/.*/1207535806166.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207535806166.jpg";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27888,6 +27871,11 @@
 "~^/.*/ReaderMode.setup$" "/static/404.html";
 "~^/.*/L.setup.*$" "/static/404.html";
 "~^/.*/GW.imageFocus.keyUp.*$" "/static/404.html";
+"~^/asiangay.*$" "/static/404.html";
+"~^/gaypor.*$" "/static/404.html";
+"~^/site.webmanifest.*$" "/static/404.html";
+"~^/.*/=3D$" "/static/404.html";
+"~^/members/.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
