--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3294,17 +3294,17 @@ default "";
 "~^/docs/statistics/2020-blake.pdf.*$" "/docs/statistics/bias/2020-blake.pdf";
 "~^/docs/ai/2020-02-03-gpt21.5b-archiveofourownao3-model-510427-samples-topp090.txt.*$" "/docs/ai/gpt/2020-02-03-gpt21.5b-archiveofourownao3-model-510427-samples-topp090.txt";
 "~^/docs/ai/2020-02-03-gpt21.5b-videogamewalkthrough-model-174925-samples-topp090.txt.*$" "/docs/ai/gpt/2020-02-03-gpt21.5b-videogamewalkthrough-model-174925-samples-topp090.txt";
-"~^/docs/ai/2015-06-03-karpathy-charrnn-visualization.tar.xz.*$" "/docs/ai/rnn/2015-06-03-karpathy-charrnn-visualization.tar.xz";
-"~^/docs/ai/2016-03-19-rossgoodwin-adventuresinnarratedreality-1.html.*$" "/docs/ai/rnn/2016-03-19-rossgoodwin-adventuresinnarratedreality-1.html";
-"~^/docs/ai/2016-06-09-rossgoodwin-adventuresinnarratedreality-2.html.*$" "/docs/ai/rnn/2016-06-09-rossgoodwin-adventuresinnarratedreality-2.html";
-"~^/docs/ai/1997-hochreiter.pdf.*$" "/docs/ai/rnn/1997-hochreiter.pdf";
-"~^/docs/ai/2021-delul.pdf.*$" "/docs/ai/rnn/2021-delul.pdf";
-"~^/docs/ai/2019-anumanchipalli.pdf.*$" "/docs/ai/rnn/2019-anumanchipalli.pdf";
-"~^/docs/ai/1989-williams-2.pdf.*$" "/docs/ai/rnn/1989-williams-2.pdf";
-"~^/docs/ai/1989-williams.pdf.*$" "/docs/ai/rnn/1989-williams.pdf";
-"~^/docs/ai/1987-robinson.pdf.*$" "/docs/ai/rnn/1987-robinson.pdf";
-"~^/docs/ai/1995-mozer.pdf.*$" "/docs/ai/rnn/1995-mozer.pdf";
-"~^/docs/ai/1988-bachrach.pdf.*$" "/docs/ai/rnn/1988-bachrach.pdf";
+"~^/docs/ai/2015-06-03-karpathy-charrnn-visualization.tar.xz.*$" "/docs/ai/nn/rnn/2015-06-03-karpathy-charrnn-visualization.tar.xz";
+"~^/docs/ai/2016-03-19-rossgoodwin-adventuresinnarratedreality-1.html.*$" "/docs/ai/nn/rnn/2016-03-19-rossgoodwin-adventuresinnarratedreality-1.html";
+"~^/docs/ai/2016-06-09-rossgoodwin-adventuresinnarratedreality-2.html.*$" "/docs/ai/nn/rnn/2016-06-09-rossgoodwin-adventuresinnarratedreality-2.html";
+"~^/docs/ai/1997-hochreiter.pdf.*$" "/docs/ai/nn/rnn/1997-hochreiter.pdf";
+"~^/docs/ai/2021-delul.pdf.*$" "/docs/ai/nn/rnn/2021-delul.pdf";
+"~^/docs/ai/2019-anumanchipalli.pdf.*$" "/docs/ai/nn/rnn/2019-anumanchipalli.pdf";
+"~^/docs/ai/1989-williams-2.pdf.*$" "/docs/ai/nn/rnn/1989-williams-2.pdf";
+"~^/docs/ai/1989-williams.pdf.*$" "/docs/ai/nn/rnn/1989-williams.pdf";
+"~^/docs/ai/1987-robinson.pdf.*$" "/docs/ai/nn/rnn/1987-robinson.pdf";
+"~^/docs/ai/1995-mozer.pdf.*$" "/docs/ai/nn/rnn/1995-mozer.pdf";
+"~^/docs/ai/1988-bachrach.pdf.*$" "/docs/ai/nn/rnn/1988-bachrach.pdf";
 "~^/docs/iq/1963-jensen.pdf.*$" "/docs/psychology/1963-jensen.pdf";
 "~^/images/2010-richardson-bythenumbers-cover.png.*$" "/images/fiction/2010-richardson-bythenumbers-cover.png";
 "~^/images/2005-paxton-figure4-5-serpentinewhalepenises.png.*$" "/images/biology/2005-paxton-figure4-5-serpentinewhalepenises.png";
@@ -3436,11 +3436,11 @@ default "";
 "~^/docs/reinforcement-learning/2021-foehn.pdf.*$" "/docs/reinforcement-learning/robot/2021-foehn.pdf";
 "~^/docs/psychology/2014-hambrick.pdf.*$" "/docs/psychology/chess/2014-hambrick.pdf";
 "~^/docs/ai/2020-kreps.pdf.*$" "/docs/ai/gpt/2020-kreps.pdf";
-"~^/docs/ai/1990-schmidhuber.pdf.*$" "/docs/ai/rnn/1990-schmidhuber.pdf";
-"~^/docs/ai/1991-hochreiter.pdf.*$" "/docs/ai/rnn/1991-hochreiter.pdf";
-"~^/docs/ai/1991-schmidhuber.pdf.*$" "/docs/ai/rnn/1991-schmidhuber.pdf";
+"~^/docs/ai/1990-schmidhuber.pdf.*$" "/docs/ai/nn/rnn/1990-schmidhuber.pdf";
+"~^/docs/ai/1991-hochreiter.pdf.*$" "/docs/ai/nn/rnn/1991-hochreiter.pdf";
+"~^/docs/ai/1991-schmidhuber.pdf.*$" "/docs/ai/nn/rnn/1991-schmidhuber.pdf";
 "~^/docs/ai/1993-cortes.pdf.*$" "/docs/ai/scaling/1993-cortes.pdf";
-"~^/docs/ai/1990-elman.pdf.*$" "/docs/ai/rnn/1990-elman.pdf";
+"~^/docs/ai/1990-elman.pdf.*$" "/docs/ai/nn/rnn/1990-elman.pdf";
 "~^/docs/cs/2000-mao.pdf.*$" "/docs/cs/cryptography/2000-mao.pdf";
 "~^/docs/ai/2018-haenssle.pdf.*$" "/docs/ai/nn/2018-haenssle.pdf";
 "~^/docs/cs/1955-nash-typeset.pdf.*$" "/docs/cs/cryptography/1955-nash-typeset.pdf";
@@ -3618,7 +3618,7 @@ default "";
 "~^/docs/culture/2008-winterbottom.pdf.*$" "https://www.ncbi.nlm.nih.gov/books/NBK76332/";
 "~^/2008-winterbottom.pdf.*$" "https://www.ncbi.nlm.nih.gov/books/NBK76332/";
 "~^/docs/ai/2021-martinezplumed.pdf.*$" "/docs/ai/scaling/economics/2021-martinezplumed.pdf";
-"~^/docs/ai/1997-hochreiter-2.pdf.*$" "/docs/ai/rnn/1997-hochreiter-2.pdf";
+"~^/docs/ai/1997-hochreiter-2.pdf.*$" "/docs/ai/nn/rnn/1997-hochreiter-2.pdf";
 "~^/docs/ai/1993-olazaran.pdf.*$" "/docs/ai/nn/1993-olazaran.pdf";
 "~^/docs/ai/1996-olazaran.pdf.*$" "/docs/ai/nn/1996-olazaran.pdf";
 "~^/docs/bitcoin/2016-kopp.pdf.*$" "/docs/bitcoin/nashx/2016-kopp.pdf";
@@ -3894,7 +3894,7 @@ default "";
 "~^/docs/economics/2020-zheng.pdf.*$" "/docs/economics/copyright/2020-zheng.pdf";
 "~^/docs/nootropic/2018-hanley.pdf.*$" "/docs/nootropic/quantified-self/2018-hanley.pdf";
 "~^/docs/ai/gan/2022-zhou.pdf.*$" "/docs/ai/gan/stylegan/2022-zhou.pdf";
-"~^/docs/ai/1995-williams.pdf.*$" "/docs/ai/rnn/1995-williams.pdf";
+"~^/docs/ai/1995-williams.pdf.*$" "/docs/ai/nn/rnn/1995-williams.pdf";
 "~^/images/gan/2019-02-15-ffhqonly-interpolation-4x4.mp4.*$" "/images/gan/stylegan/2019-02-15-ffhqonly-interpolation-4x4.mp4";
 "~^/docs/ai/1999-provost.pdf.*$" "/docs/ai/tabular/1999-provost.pdf";
 "~^/docs/ai/1997-oates.pdf.*$" "/docs/ai/tabular/1997-oates.pdf";
@@ -3932,7 +3932,7 @@ default "";
 "~^/docs/iq/2019-allegrini.pdf.*$" "https://www.biorxiv.org/content/10.1101/418210v1.full";
 "~^/docs/ai/scaling/2018-sandberg.pdf.*$" "/docs/ai/scaling/hardware/2018-sandberg.pdf";
 "~^/docs/ai/2018-fu.pdf.*$" "/docs/ai/nn/2018-fu.pdf";
-"~^/docs/ai/1986-jordan.pdf.*$" "/docs/ai/rnn/1986-jordan.pdf";
+"~^/docs/ai/1986-jordan.pdf.*$" "/docs/ai/nn/rnn/1986-jordan.pdf";
 "~^/docs/ai/1986-rumelhart-2.pdf.*$" "/docs/ai/nn/1986-rumelhart-2.pdf";
 "~^/docs/ai/1988-finkbeiner.pdf.*$" "/docs/ai/nn/1988-finkbeiner.pdf";
 "~^/docs/ai/2018-choi.pdf.*$" "/docs/ai/nn/2018-choi.pdf";
